--- a/estilo.css
+++ b/estilo.css
@@ -8,6 +8,22 @@
 html{
     scroll-behavior: smooth;
 }
+/**Movil**/
+@media (max-width: 767px) {
+    .desktop {display: none;}
+    .tablet {display: none;}
+   
+}
+/**Tablet**/
+@media (min-width: 768px) and (max-width: 990) {
+    .desktop {display: none;}
+    .movil {display: none;}
+}
+/**Escritorio**/
+@media (min-width: 991px) {
+    .tablet {display: none;}
+    .movil {display: none;}
+}
 /* MENU */
 .contenedor-header{
     background: #201647;
